--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.google.firebase:firebase-database:11.0.2'
+
+    compile 'com.android.support:recyclerview-v7:26+'
+    compile 'com.android.support:cardview-v7:26.0.+'
     testCompile 'junit:junit:4.12'
 }
 
