--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
@@ -34,11 +35,13 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.google.firebase:firebase-database:11.0.2'
-
-    compile 'com.android.support:recyclerview-v7:26+'
+    compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:cardview-v7:26.0.+'
+    compile 'com.google.firebase:firebase-storage:11.0.2'
+    compile 'com.google.firebase:firebase-auth:11.0.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
