--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,10 @@
             android:name=".ui.AboutActivity"
             android:parentActivityName=".ui.HomeActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.ReportDetailActivity"></activity>
+        <activity
+            android:name=".ui.ReportDetailActivity"
+            android:parentActivityName=".ui.HomeActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
